--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Employee Tracker</title>
+  <title>Train Time Tracker</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -18,25 +18,31 @@
 
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <link rel="stylesheet" href="./style.css">
 
-  <style>
-    #employee-table th,
-    td {
-      display: inline-block;
-      width: 16.575%;
-    }
-  </style>
+  
 </head>
 
 <body>
+<div class= "container1">
+  <div class="fallingLeafAnimate">
+    <span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span>
 
+  </div>
+
+</div>
   <!-- Employee Tracker -->
   <div class="container">
 
     <!-- Jumbotron -->
     <div class="jumbotron" style="background-color: black; color: white">
-      <h1 class="text-center">Employee Data Management</h1>
-      <h3 class="text-center">A Comprehensive Directory of Employee Billable Hours</h3>
+      <h1 class="text-center">Train Tracker</h1>
+      <h3 class="text-center">Never miss a train again!</h3>
     </div>
 
     <div class="row">
@@ -45,7 +51,7 @@
 
         <!-- Current Employees-->
         <div class="card mb-4">
-          <div class="card-header">Current Employees</div>
+          <div class="card-header">Train Schedule</div>
           <div class="card-body">
             <table class="table table-sm table-hover" id='employee-table'>
               <thead>
